--- a/index.html
+++ b/index.html
@@ -13,70 +13,70 @@
             <th>Email</th>
             <th>Contact no.</th>
         </tr>
-        <tr>
+        <tr style="background-color: aquamarine;">
             <td>01.</td>
             <td>Praveen Kishore</td>
             <td>44</td>
             <td>praveenkishore534@gmail.com</td>
             <td>9142185426</td>
         </tr>
-        <tr>
+        <tr style="background-color: aquamarine;">
             <td>02.</td>
             <td>Sumit Kumar</td>
             <td>38</td>
             <td>sumitkumar69@gmail.com</td>
             <td>9178326476</td>
         </tr>
-        <tr>
+        <tr style="background-color: aquamarine;">
             <td>03.</td>
             <td>Pankaj Kumar</td>
             <td>05</td>
             <td>pankajkumar78@gmail.com</td>
             <td>9178326930</td>
         </tr>
-        <tr>
+        <tr style="background-color: aquamarine;">
             <td>04.</td>
             <td>Golu Kumar</td>
             <td>07</td>
             <td>golukumar7656@gmail.com</td>
             <td>8878326930</td>
         </tr>
-        <tr>
+        <tr style="background-color:aquamarine ;">
             <td>05.</td>
             <td>Ranjan Kumar</td>
             <td>40</td>
             <td>ranjankumar241@gmail.com</td>
             <td>9155326930</td>
         </tr>
-        <tr>
+        <tr style="background-color: aquamarine;">
             <td>06.</td>
             <td>Deepak Kumar</td>
             <td>23</td>
             <td>deepakkumar941@gmail.com</td>
             <td>8877326930</td>
         </tr>
-        <tr>
+        <tr style="background-color: aquamarine;">
             <td>07.</td>
             <td>Manjesh Kumar</td>
             <td>16</td>
             <td>manjeshkumar941@gmail.com</td>
             <td>7061266930</td>
         </tr>
-        <tr>
+        <tr style="background-color: aquamarine;">
             <td>08.</td>
             <td>Satyam Kumar</td>
             <td>55</td>
             <td>satyamkumar54@gmail.com</td>
             <td>9165984328</td>
         </tr>
-        <tr>
+        <tr style="background-color: aquamarine;">
             <td>09.</td>
             <td>Manish Kumar</td>
             <td>19</td>
             <td>manishkumar877@gmail.com</td>
             <td>7765984328</td>
         </tr>
-        <tr>
+        <tr style="background-color: aquamarine;">
             <td>10.</td>
             <td>Hari OM </td>
             <td>15</td>
@@ -86,5 +86,43 @@
 
     </table>
     
+<!-- Code injected by live-server -->
+<script>
+	// <![CDATA[  <-- For SVG support
+	if ('WebSocket' in window) {
+		(function () {
+			function refreshCSS() {
+				var sheets = [].slice.call(document.getElementsByTagName("link"));
+				var head = document.getElementsByTagName("head")[0];
+				for (var i = 0; i < sheets.length; ++i) {
+					var elem = sheets[i];
+					var parent = elem.parentElement || head;
+					parent.removeChild(elem);
+					var rel = elem.rel;
+					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
+						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
+					}
+					parent.appendChild(elem);
+				}
+			}
+			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+			var address = protocol + window.location.host + window.location.pathname + '/ws';
+			var socket = new WebSocket(address);
+			socket.onmessage = function (msg) {
+				if (msg.data == 'reload') window.location.reload();
+				else if (msg.data == 'refreshcss') refreshCSS();
+			};
+			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+				console.log('Live reload enabled.');
+				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
+			}
+		})();
+	}
+	else {
+		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
+	}
+	// ]]>
+</script>
 </body>
 </html>
